<resources>
    <string name="app_name">LiveStreaming</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--loginActivity -->
    <string name="activity_login_login">登录</string>
    <string name="btn_phone_login">手机号登录</string>
    <string name="login_normal_login">用户名登录</string>
    <string name="activity_login_register">注册新用户</string>
    <string name="activity_login_guest_login">游客模式</string>
    <string name="login_username">用户名</string>
    <string name="activity_login_verify_code">获取验证码</string>
    <string name="login_verify_code_edit">验证码</string>
    <string name="login_phone_num">手机号</string>
    <string name="login_password">密码</string>
    <!--loginActivity -->

    <!--registerActivity -->
    <string name="activity_register_phone_register">手机注册</string>
    <string name="activity_register_normal_register">用户名注册</string>
    <string name="activity_register_register">注册</string>
    <string name="activity_register_username">用户名(4~24位字母、数字、下划线)</string>
    <string name="activity_register_password">密码(6~16位个字符)</string>
    <string name="activity_register_password_verify">确认密码</string>
    <string name="activity_register_phone_num">手机号</string>
    <string name="activity_register_verify_code">验证码</string>
    <string name="activity_register_return">返回</string>
    <!--registerActivity -->


    <string name="tip_force_offline">您的帐号已在其它地方登陆</string>
    <!-- permission check-->
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>



    <!-- fragment publish -->
    <string name="publish_already_launch_avRoom">wait!</string>
    <string name="publish_photo_take">拍照</string>
    <string name="publish_photo_album">相册</string>
    <string name="publish_need_photo_tips">从未发起过图片，请选择一张作为直播封面</string>
    <string name="publish_wait_uploading">请等待封面上传完成</string>
    <string name="publish_upload_success">上传封面成功</string>
    <string name="publish_photo_make_sure_tips">请添加一张照片</string>
    <string name="publish_photo_make_sure_title">请输入图片标题</string>
    <string name="publish_create_room_failed">创建房间失败</string>
    <string name="publish_upload_cover_failed">上传封面失败</string>
    <string name="publish_photo_success">发布图片成功</string>
    <string name="text_continue">继续</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_preview">发布直播</string>
    <string name="text_photo_preview">发布照片</string>
    <string name="text_live_title_input">请输入直播标题</string>
    <string name="text_photo_title_input">你的照片你做主</string>
    <string name="text_live_open_lbs">开启位置</string>
    <string name="text_live_close_lbs">不显示地理位置</string>
    <string name="text_live_record_yes">进行录制</string>
    <string name="text_live_record_no">不进行录制</string>
    <string name="text_live_record_scr">启动录屏</string>
    <string name="text_live_not_record_scr">不启动录屏</string>
    <string name="text_live_location">正在定位中</string>
    <string name="text_live_lbs_fail">定位失败</string>
    <string name="text_live_lbs_unknown">不显示地理位置</string>
    <string name="text_live_default_title">我的直播我做主</string>
    <string name="text_start_push">开启推流</string>
    <string name="text_start_screen_record">启动录屏</string>
    <string name="text_record_info">开始录制后直播视频自动录制，并可以进行回放</string>
    <string name="text_live_all_see">所有人可看</string>
    <string name="text_live_share">同步到</string>
    <string name="text_live">正在直播>></string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_admire_limit">点赞过于频繁</string>
    <string name="tip_no_permission">权限不足</string>

    <string name="host_sign">我的签名就是把我的世界直播给你们</string>
    <string name="host_phone">iPhone6S Plus</string>
    <string name="host_funs">粉丝数:9090</string>
    <string name="host_follow">关注:7089</string>
    <string name="host_admire">赞:11.3w</string>


    <string name="ping_ing">测速中</string>
    <string name="ping_progress">测速进度</string>
    <string name="ping_speed_test">网络测速</string>
    <string name="ping_start">开始测速</string>
    <string name="ping_no_server">获取测速列表失败，请稍后重试</string>
    <string name="ping_time">平均时延</string>
    <string name="ping_miss">丢包率</string>
    <string name="ping_cancel">取消</string>
    <string name="ping_TEL">电信</string>
    <string name="ping_CMCC">移动</string>
    <string name="ping_CNC">联通</string>
    <string name="ping_SH">上海</string>
    <string name="ping_SZ">深圳</string>
    <string name="ping_CD">成都</string>
    <string name="ping_TJ">天津</string>
    <string name="ping_NJ">南京</string>
    <string name="ping_HZ">杭州</string>
    <string name="ping_GZ">广州</string>

    <string name="live_cancel">确定结束直播？</string>
    <string name="gift_market_dialog_balance">余额： </string>
    <string name="gift_market_dialog_title">赠送礼物 </string>
    <string name="gift_market_dialog_pay">充值></string>
    <string name="gift_market_dialog_send">赠送</string>
    <string name="gift_market_text_syb">币</string>
    <string name="gift_market_no_syb">免费</string>

    <string name="live_gift_dialog_title">打赏币</string>
    <string name="live_gift_dialog_send">打赏</string>
    <string name="live_gift_dialog_pay"><u>兑换币</u></string>
    <string name="live_gift_dialog_balance_part1">余额： </string>
    <string name="live_gift_dialog_balance_part2">币</string>
    <string name="live_gift_dialog_zsb_send_success">打赏成功！</string>
    <string name="live_gift_dialog_gift_send_success">送礼成功！</string>
    <string name="live_gift_dialog_gift_send_failed">送礼失败！</string>
    <string name="live_gift_dialog_gift_send_sybnotenough">币不足，请充值。</string>
    <string name="live_gift_dialog_zsb_send_error">网络异常</string>
    <string name="live_gift_send">送出了</string>
    <string name="live_gift_unit">个</string>
    <string name="live_gift_msg_zhb">枚币</string>
    <string name="live_syb_gottopay_dialog">您的币不足是否去充值？</string>


    <string name="forgetPwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="loginActivity_username_name">用户名：</string>
    <string name="loginActivity_pwd_pwd">密\t\t码：</string>
    <string name="loginActivity_username_des">手机号</string>
    <string name="loginActivity_pwd_des">请输入密码</string>
    <string name="loginActivity_login">登录</string>
    <string name="loginActivity_input_name_pwd">请输入用户名和密码</string>
    <string name="loginActivity_input_name">请输入用户名</string>
    <string name="loginActivity_input_pwd">请输入密码</string>
    <string name="other_login_ways">其他登录方式</string>

    <string name="live_setting_flash_open">开闪光</string>
    <string name="live_setting_flash_close">关闪光</string>
    <string name="live_setting_camera"> 翻转</string>
    <string name="live_setting_beauty_open">开美颜</string>
    <string name="live_setting_beauty_close">关美颜</string>
    <string name="live_setting_music">音效</string>
    <string name="live_follow_author">关注主播</string>
    <string name="live_fore_finish">发起个人直播</string>
    <string name="live_join_live">&#160;来了</string>
    <string name="live_quite_live">离开房间</string>
    <string name="live_member_first_send_heart">点亮了桃心</string>
    <string name="live_system_notify">平台抵制色情、低俗、引诱等违法违规内容，一经发现将封停账号，网警24小时在线巡逻。</string>
    <string name="live_system_name">官方提示</string>
    <string name="live_follow_host">关注了主播</string>
    <string name="live_host_leave">主播离开一下，精彩不中断，不要走开呦</string>
    <string name="live_host_back">主播回来了，视频即将恢复</string>
    <string name="live_member_silence_notify">您已被禁言，无法评论</string>
    <string name="live_member_silence_im">被管理员禁言</string>
    <string name="live_member_silence_dialog">禁言后此人不可以在该直播间互动</string>
    <string name="live_member_kick_dialog">是否将此人剔出直播间</string>
    <string name="live_tourist_login_dialog">您需要登录才能进行此操作，是否登录？</string>


    <string name="title_fance">粉丝</string>
    <string name="title_follow">关注</string>
    <string name="title_messege">消息</string>
    <string name="title_search">搜索</string>

    <string name="loading_ing">正在加载…</string>
    <string name="mores">更多</string>
    <string name="networkerror_retry">网络异常，上拉重试</string>
    <string name="no_more_data_and_click">已加载全部内容 点击刷新</string>
    <string name="btn_cancel">取消</string>
</resources>
